@@ -374,6 +374,10 @@ isIncomplete(con)
   \code{"UTF-16"} and \code{"UCS-2"} (see
   \url{http://en.wikipedia.org/wiki/UTF-16/UCS-2}: the use of surrogate
   pairs is very rare so \code{"UCS-2LE"} is an appropriate first choice.
+
+  As from \R 2.16.0 the encoding \code{"UTF-8-BOM"} is accepted and will
+  remove a Byte Order Mark if present (which it often is for files and
+  webpages generated by Microsoft applications).
   
   Requesting a conversion that is not supported is an error, reported
   when the connection is opened.  Exactly what happens when the
